--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "homepage": "https://thusiru.github.io/PrimeKey",
   "dependencies": {
+    "antd": "^6.1.3",
     "dompurify": "^3.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
-    "react-tabs": "^6.1.0",
-    "react-widgets": "^5.8.6"
+    "react-tabs": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
